--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,8 @@
 
 	<build>
 		<plugins>
+
+			<!-- Plugin compile -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -110,6 +112,7 @@
 				</configuration>
 			</plugin>
 
+			<!-- Plugin Spring Boot -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -123,6 +126,17 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<!-- ❗ Plugin này dùng để tắt test -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
